--- a/website.html
+++ b/website.html
@@ -199,7 +199,7 @@
         { id: 'intro', label: 'Intro', background: "url('intro-background.png')" },
         { id: 'soccer', label: 'Soccer Phase', background: "url('soccer-background.png')", podiumId: 'soccerPodium' },
         { id: 'tkd', label: 'Taekwondo Phase', background: "url('taekwondo-background.png')", podiumId: 'tkdPodium' },
-        { id: 'robotics', label: 'Robotics Phase', background: "url('robotics-background.jpg!w700wp')", podiumId: 'robotPodium' },
+        { id: 'robotics', label: 'Robotics Phase', background: "url('robotics-background.jpg')", podiumId: 'robotPodium' },
         { id: 'conclusion', label: 'Conclusion', background: "url('conclusion-background.png')" },
       ];
 
