--- a/website.html
+++ b/website.html
@@ -19,12 +19,21 @@
       overflow-x: hidden;
     }
     header {
-      background-color: rgba(31, 41, 55, 0.85);
+      background: linear-gradient(to right, #1e3a8a, #2563eb);
       padding: 2rem;
       text-align: center;
       color: white;
       z-index: 100;
       position: relative;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+    }
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+    }
+    header p {
+      font-size: 1.2rem;
+      opacity: 0.9;
     }
     .tabs {
       display: flex;
@@ -128,10 +137,10 @@
   </header>
 
   <div class="tabs">
-    <button class="tab-button active" onclick="showTab('position')">Original Position</button>
-    <button class="tab-button" onclick="showTab('praxis1')">Praxis I</button>
-    <button class="tab-button" onclick="showTab('civ102')">CIV102 Bridge</button>
-    <button class="tab-button" onclick="showTab('praxis2')">Praxis II</button>
+    <button class="tab-button active" onclick="showTab('position', event)">Original Position</button>
+    <button class="tab-button" onclick="showTab('praxis1', event)">Praxis I</button>
+    <button class="tab-button" onclick="showTab('civ102', event)">CIV102 Bridge</button>
+    <button class="tab-button" onclick="showTab('praxis2', event)">Praxis II</button>
   </div>
 
   <div id="position" class="tab-content active" style="background: none; color: white; box-shadow: none;">
@@ -175,12 +184,27 @@
     </div>
   </div>
 
+  <div id="praxis1" class="tab-content">
+    <h2>Praxis I</h2>
+    <p><strong>Summary:</strong> Provide a clear and professional summary of your Praxis I project, including context, challenges, and outcomes.</p>
+  </div>
+
+  <div id="civ102" class="tab-content">
+    <h2>CIV102 Bridge</h2>
+    <p><strong>Summary:</strong> Describe the CIV102 bridge project’s objectives, methodology, and final results, emphasizing your design decisions and teamwork.</p>
+  </div>
+
+  <div id="praxis2" class="tab-content">
+    <h2>Praxis II</h2>
+    <p><strong>Summary:</strong> Outline your Praxis II design process, showcasing how your engineering thinking has matured and how it connects to your professional identity.</p>
+  </div>
+
   <script>
-    function showTab(tabId) {
+    function showTab(tabId, event) {
       const contents = document.querySelectorAll('.tab-content');
       const buttons = document.querySelectorAll('.tab-button');
-      contents.forEach((content) => content.classList.remove('active'));
-      buttons.forEach((btn) => btn.classList.remove('active'));
+      contents.forEach(content => content.classList.remove('active'));
+      buttons.forEach(btn => btn.classList.remove('active'));
       document.getElementById(tabId).classList.add('active');
       event.target.classList.add('active');
     }
@@ -192,7 +216,6 @@
       const scrollTop = window.scrollY;
       const windowHeight = window.innerHeight;
       const scrollPos = scrollTop + windowHeight / 2;
-
       const body = document.getElementById('mainBody');
 
       const phases = [
