--- a/website.html
+++ b/website.html
@@ -88,6 +88,13 @@
         transform: translateY(0);
       }
     }
+    #position {
+      background: none;
+      color: white;
+      box-shadow: none;
+      padding: 0;
+      max-width: none;
+    }
   </style>
 </head>
 <body id="mainBody">
@@ -105,7 +112,7 @@
     <button class="tab-button" onclick="showTab('praxis2', event)">Praxis II</button>
   </div>
 
-  <div id="position" class="tab-content active" style="background: none; color: white; box-shadow: none;">
+  <div id="position" class="tab-content active">
     <div class="podium-container">
       <img id="soccerPodium" class="podium" src="soccer-podium.png" alt="Soccer Podium">
       <img id="tkdPodium" class="podium" src="tkd-podium.png" alt="TKD Podium">
