--- a/website.html
+++ b/website.html
@@ -255,7 +255,8 @@
   <div id="praxis2" class="tab-content">
   <div class="section-container fade-section">
     <h2>One Pager</h2>
-    <p>Brief overview of your Praxis I project’s vision and goals in a concise one-pager format.</p>
+    <img src="Praxis2Pager1.png"/>
+    <img src="Praxis2Pager2.png"/>
   </div>
 
   <div class="section-container fade-section">
