--- a/website.html
+++ b/website.html
@@ -269,13 +269,15 @@
 </div>
 
 
-<div class="section-container fade-section">
-  <h2>One Pager</h2>
-  <div class="image-row">
-    <img src="Praxis2Pager1.png" alt="Praxis 2 Page 1" />
-    <img src="Praxis2Pager2.png" alt="Praxis 2 Page 2" />
+<div id="praxis2" class="tab-content">
+  <div class="section-container fade-section">
+    <h2>One Pager</h2>
+    <div class="image-row">
+      <img src="Praxis2Pager1.png" alt="Praxis 2 Page 1" />
+      <img src="Praxis2Pager2.png" alt="Praxis 2 Page 2" />
+    </div>
   </div>
-  
+
   <div class="section-container fade-section">
     <h2>CTMF 1</h2>
     <p>Explain your first application of the CTMF model and how you began to navigate the design cycle.</p>
@@ -291,6 +293,7 @@
     <p>Final reflections on the project, and how your work aligned with user needs and technical constraints.</p>
   </div>
 </div>
+
 
 
   <script>
