--- a/website.html
+++ b/website.html
@@ -9,7 +9,7 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       font-family: 'Inter', sans-serif;
-      background-color: #000;
+      background-color: #fff;
       color: #fff;
       transition: background 1.5s ease-in-out;
       background-size: cover;
