--- a/website.html
+++ b/website.html
@@ -294,6 +294,31 @@
   </div>
 </div>
 
+<div id="Resources" class="tab-content">
+<div class="section-container fade-section">
+  <h2>One Pager</h2>
+  <div class="image-row">
+    <img src="Praxis2Pager1.png" alt="Praxis 2 Page 1" />
+    <img src="Praxis2Pager2.png" alt="Praxis 2 Page 2" />
+  </div>
+</div>
+
+<div class="section-container fade-section">
+  <h2>CTMF 1</h2>
+  <p>Explain your first application of the CTMF model and how you began to navigate the design cycle.</p>
+</div>
+
+<div class="section-container fade-section">
+  <h2>CTMF 2</h2>
+  <p>Discuss how your understanding evolved and how iteration improved your approach.</p>
+</div>
+
+<div class="section-container fade-section">
+  <h2>CTMF 3</h2>
+  <p>Final reflections on the project, and how your work aligned with user needs and technical constraints.</p>
+</div>
+</div>
+
 
 
   <script>
