--- a/website.html
+++ b/website.html
@@ -203,7 +203,7 @@
 
   <header>
     <h1>Engineering Design Portfolio</h1>
-    <p>ESC102 | Student Engineer Design Showcase</p>
+    <p>ESC102 | Chandresh Balakrishnan</p>
   </header>
 
   <div class="tabs">
