--- a/website.html
+++ b/website.html
@@ -299,7 +299,7 @@
 </div>
 
 
-<div id="praxis2" class="tab-content">
+<div id="praxis2" class="tab-content" style="background-color: #375b43;">
   <div class="section-container fade-section">
     <h2>One Pager</h2>
     <div class="image-row">
