--- a/website.html
+++ b/website.html
@@ -364,7 +364,7 @@
   
     if (tabId === 'praxis2') {
   body.style.backgroundImage = 'none';
-  body.style.backgroundColor = '#e0f2f1'; // 🌈 Your desired outer background color here
+  body.style.backgroundColor = '#375b43'; // 🌈 Your desired outer background color here
 } else if (tabId === 'position') {
   lastPhase = '';
   window.dispatchEvent(new Event('scroll'));
