--- a/website.html
+++ b/website.html
@@ -365,7 +365,16 @@
     if (tabId === 'praxis2') {
   body.style.backgroundImage = 'none';
   body.style.backgroundColor = '#375b43'; // 🌈 Your desired outer background color here
-} else if (tabId === 'position') {
+} 
+  else if (tabId === 'praxis1') {
+  body.style.backgroundImage = 'none';
+  body.style.backgroundColor = '#666699'; // 🌈 Your desired outer background color here
+}   
+  else if (tabId === 'civ102') {
+  body.style.backgroundImage = 'none';
+  body.style.backgroundColor = '#cc0000'; // 🌈 Your desired outer background color here
+} 
+  else if (tabId === 'position') {
   lastPhase = '';
   window.dispatchEvent(new Event('scroll'));
   body.style.backgroundColor = ''; // let cutscene handle it
