--- a/website.html
+++ b/website.html
@@ -73,19 +73,21 @@
     }
 
     .image-row {
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-      flex-wrap: wrap;
-      margin-top: 1.5rem;
-    }
-    
-    .image-row img {
-      max-width: 100%;
-      max-height: 500px;
-      border-radius: 1rem;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+  margin-top: 1.5rem;
+  }
+  
+  .image-row img {
+    width: 45%;
+    max-width: 400px;
+    height: auto;
+    border-radius: 1rem;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+}
+
 
     
     .scroll-section, .intro-section, .conclusion-section {
