--- a/website.html
+++ b/website.html
@@ -266,9 +266,37 @@
 </div>
 
   <div class="section-container fade-section">
-    <h2>CTMF 1</h2>
-    <p>Explain your first application of the CTMF model and how you began to navigate the design cycle.</p>
+  <h2>CTMF 1: Using Standards to Frame Requirements</h2>
+
+  <p>
+    Integrating the <strong>NSPIRE safety standard</strong> (Figure 1) into our project requirements significantly enhanced my understanding of the engineering design process by foregrounding user safety and functionality. NSPIRE emphasizes the need to eliminate sharp edges and puncture risks, particularly in public environments, to prevent user harm and maintain durability of personal belongings.
+  </p>
+
+  <div class="image-row">
+    <img src="Safety.png" alt="Figure 1 - NSPIRE Safety Standard" />
   </div>
+
+  <p>
+    By referencing NSPIRE, we created explicit requirements to avoid exposed edges or protrusions that could pose hazards. This led to design choices that featured <strong>rounded corners</strong>, <strong>enclosed components</strong>, and the use of <strong>impact-safe materials</strong>. What initially seemed like a constraint evolved into a design catalyst — enabling safer, more refined, and ultimately more user-friendly prototypes.
+  </p>
+
+  <p>
+    This process helped me understand that engineering design extends beyond pure functionality. It is inherently about <strong>mitigating risk</strong>, protecting the user, and anticipating failure scenarios. I had previously viewed safety standards as an afterthought or a box to check off — but through our application of NSPIRE, I began to see standards as strategic design tools that elevate both performance and user experience.
+  </p>
+
+  <div class="image-row">
+    <img src="glide.png" alt="Figure 2 - Rounded Glide Reference Design" />
+  </div>
+
+  <p>
+    For example, our analysis of commercially available glides (Figure 2) demonstrated how even everyday components embody NSPIRE principles through soft edges and recessed fasteners. Seeing this principle in action solidified my understanding that safety standards shape real-world design decisions.
+  </p>
+
+  <p>
+    Some may argue that strict standards stifle creativity. On the contrary, I found that NSPIRE guided us to think more critically and creatively, pushing us to devise <strong>innovative solutions that didn’t compromise safety</strong>. In the end, aligning with the NSPIRE framework helped our team build designs that were more resilient, intuitive, and ethically responsible — deepening my understanding of the "framing" phase in the engineering design process.
+  </p>
+</div>
+
 
   <div class="section-container fade-section">
     <h2>CTMF 2</h2>
