--- a/website.html
+++ b/website.html
@@ -8,6 +8,7 @@
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
+      line-height: 1.8;
       font-family: 'Inter', sans-serif;
       background-color: #fff;
       color: #fff;
@@ -59,6 +60,7 @@
       color: white;
     }
     .tab-content {
+      line-height: 1.8;
       display: none;
       max-width: 1000px;
       margin: 4rem auto;
@@ -272,9 +274,11 @@
     Integrating the <strong>NSPIRE safety standard</strong> (Figure 1) into our project requirements significantly enhanced my understanding of the engineering design process by foregrounding user safety and functionality. NSPIRE emphasizes the need to eliminate sharp edges and puncture risks, particularly in public environments, to prevent user harm and maintain durability of personal belongings.
   </p>
 
-  <div class="image-row">
-    <img src="Safety.png" alt="Figure 1 - NSPIRE Safety Standard" />
-  </div>
+  <figure style="text-align: center;">
+  <img src="Safety.png" alt="Figure 1 - NSPIRE Safety Standards" style="max-width: 100%; height: auto;" />
+  <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">Figure 1 – NSPIRE Safety Standard used to reframe requirements to adhere to safety</figcaption>
+</figure>
+
 
   <p>
     By referencing NSPIRE, we created explicit requirements to avoid exposed edges or protrusions that could pose hazards. This led to design choices that featured <strong>rounded corners</strong>, <strong>enclosed components</strong>, and the use of <strong>impact-safe materials</strong>. What initially seemed like a constraint evolved into a design catalyst — enabling safer, more refined, and ultimately more user-friendly prototypes.
@@ -284,9 +288,11 @@
     This process helped me understand that engineering design extends beyond pure functionality. It is inherently about <strong>mitigating risk</strong>, protecting the user, and anticipating failure scenarios. I had previously viewed safety standards as an afterthought or a box to check off — but through our application of NSPIRE, I began to see standards as strategic design tools that elevate both performance and user experience.
   </p>
 
-  <div class="image-row">
-    <img src="glide.png" alt="Figure 2 - Rounded Glide Reference Design" />
-  </div>
+  <figure style="text-align: center;">
+  <img src="glide.png" alt="Figure 2 - Glide Reference" style="max-width: 100%; height: auto;" />
+  <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">Figure 2 – Glide design with rounded, NSPIRE-compliant edges</figcaption>
+  </figure>
+
 
   <p>
     For example, our analysis of commercially available glides (Figure 2) demonstrated how even everyday components embody NSPIRE principles through soft edges and recessed fasteners. Seeing this principle in action solidified my understanding that safety standards shape real-world design decisions.
