--- a/website.html
+++ b/website.html
@@ -289,7 +289,7 @@
   </p>
 
   <figure style="text-align: center;">
-  <img src="glide.png" alt="Figure 2 - Glide Reference" style="max-width: 100%; height: auto;" />
+  <img src="gilde.png" alt="Figure 2 - Glide Reference" style="max-width: 100%; height: auto;" />
   <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">Figure 2 – Glide design with rounded, NSPIRE-compliant edges</figcaption>
   </figure>
 
