--- a/website.html
+++ b/website.html
@@ -305,9 +305,36 @@
 
 
   <div class="section-container fade-section">
-    <h2>CTMF 2</h2>
-    <p>Discuss how your understanding evolved and how iteration improved your approach.</p>
-  </div>
+  <h2>CTMF 2: Diverging with the Lotus Method</h2>
+
+  <p>
+    Utilizing the <strong>Lotus method</strong> (Figure 3) as a team enhanced my understanding of engineering design, particularly the value of structured, open-minded collaboration during idea generation. The Lotus technique encourages expansive thinking by breaking down a central challenge into eight sub-categories and generating multiple solutions within each one. In our case, this method helped us brainstorm features for a chair-stabilization device, leading to ideas focused on adjustable length, material compatibility, portability, and user safety.
+  </p>
+
+  <figure style="text-align: center;">
+    <img src="lotus.png" alt="Lotus Method Ideation Grid" style="max-width: 100%; height: auto; border-radius: 1rem; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);" />
+    <figcaption style="margin-top: 0.75rem; font-size: 0.95rem; color: #555;">
+      <strong>Figure 3:</strong> Lotus Method ideation grid used to diverge solutions across functional categories.
+    </figcaption>
+  </figure>
+
+  <p>
+    Working through the Lotus method as a team, we identified solutions like <strong>telescoping mechanisms</strong> for adjustable length and <strong>anti-slip base pads</strong> to improve surface grip — each inspired by different functional requirements. This structure pushed us to analyze the problem from multiple angles and think beyond initial assumptions. It wasn’t just about quantity; the process also encouraged us to build on each other’s ideas and refine them in real time.
+  </p>
+
+  <p>
+    More importantly, the collaborative nature of the method revealed how <strong>divergent thinking</strong> within a team fosters innovation. Each member brought their unique perspective, which helped me appreciate ideas I wouldn’t have considered on my own. For example, someone on the team suggested using <em>rotational platforms</em> to allow chair legs to adapt to uneven floors — an idea that wouldn't have come from my own line of thought. This highlighted that engineering design isn’t a solo pursuit; it’s a collective process of shared creativity.
+  </p>
+
+  <p>
+    One concern with group ideation is the potential for misalignment or inefficiency. However, the <strong>Lotus method provided just enough structure</strong> to channel our brainstorming in a focused, productive way. It helped us avoid common pitfalls like redundancy or off-topic tangents by rooting all discussions in a clearly defined category set. The result was a broad and balanced list of requirements and features that fed directly into our design brief.
+  </p>
+
+  <p>
+    This process deepened my understanding of the <strong>divergence phase</strong> in the engineering design process. It showed me that open-minded, collaborative brainstorming isn't chaotic — it's essential. The Lotus method helped transform scattered ideas into a strategic foundation for our project, reinforcing that the best solutions often come from a wide spectrum of voices, not just one mind.
+  </p>
+</div>
+
 
   <div class="section-container fade-section">
     <h2>CTMF 3</h2>
