--- a/website.html
+++ b/website.html
@@ -260,11 +260,14 @@
 
   <div id="praxis1" class="tab-content">
   <div class="section-container fade-section">
-  <h2>One Pager</h2>
-  <div class="image-row">
-    <img src="Praxis1Pager1.png" alt="Praxis 1 Page 1" />
-    <img src="Praxis1Pager2.png" alt="Praxis 1 Page 2" />
-  </div>
+    <p>
+      <strong>Splartz</strong> is a dynamic chair-stabilization platform developed to eliminate wobbling caused by uneven leg lengths in study environments. Designed specifically for square-legged chairs, the device utilizes an internal elastic air chamber that adjusts to user weight, providing automatic compensation for leg height discrepancies between 1.25 mm and 12 mm. With a compact form and a 150 kg capacity, Splartz supports both functionality and portability. The team applied structured decision-making tools (e.g., Pugh charts, measurement matrices) to evaluate design alternatives, ultimately selecting the air-pump concept for its adaptability, simplicity, and alignment with safety standards. Key design enhancements include reduced platform height for stability, a square base for chair compatibility, and a gyroid infill structure that offers near-isotropic strength while minimizing material use. The final prototype achieved a 98% correction accuracy rate in testing, reflecting the team’s emphasis on user comfort, safety, and real-world applicability.
+    </p>
+    
+    <div class="image-row">
+      <img src="Praxis1Pager1.png" alt="Praxis 1 Page 1" />
+      <img src="Praxis1Pager2.png" alt="Praxis 1 Page 2" />
+    </div>
 </div>
 
   <div class="section-container fade-section">
