--- a/website.html
+++ b/website.html
@@ -280,7 +280,7 @@
     Some might argue this limits creativity, but in our case, it elevated the creativity. It pushed us to consider novel enclosures, alternate materials, and modular add-ons. In retrospect, using NSPIRE made our design more robust, and more responsible.
   </p>
   <figure style="text-align: center; margin-top: 2rem;">
-    <img src="Screenshot 2025-04-11 at 12.07.22 AM.png" alt="NSPIRE Standard" style="max-width: 100%; border-radius: 1rem;" />
+    <img src="Safety.png" alt="NSPIRE Standard" style="max-width: 100%; border-radius: 1rem;" />
     <figcaption style="margin-top: 0.5rem; font-size: 1rem;">
       <strong>Figure 1.</strong> NSPIRE criteria for puncture and sharp edge hazards; the glide design informed safe part selection.
     </figcaption>
@@ -300,7 +300,7 @@
     Critics may say that diverging as a group slows things down or becomes overwhelming. But the Lotus format provided enough focus to keep us grounded. This CTMF taught me that divergence isn’t about volume of ideas alone — it’s about strategic exploration with others. The result was a more robust idea pool that helped shape a clearer, more complete design brief.
   </p>
   <figure style="text-align: center; margin-top: 2rem;">
-    <img src="Screenshot 2025-04-11 at 12.20.07 AM.png" alt="Lotus Blossom Ideation" style="max-width: 100%; border-radius: 1rem;" />
+    <img src="lotus.png" alt="Lotus Blossom Ideation" style="max-width: 100%; border-radius: 1rem;" />
     <figcaption style="margin-top: 0.5rem; font-size: 1rem;">
       <strong>Figure 2.</strong> Team-generated Lotus Blossom ideation matrix; categories included structure, locking mechanisms, and modularity.
     </figcaption>
